@@ -28,6 +28,13 @@
       </attribute>
       <layout class="QVBoxLayout" name="verticalLayout" >
        <item>
+        <widget class="QLabel" name="label_16" >
+         <property name="text" >
+          <string>You may need to restart the program for these changes to take effect</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <layout class="QHBoxLayout" name="horizontalLayout_2" >
          <item>
           <widget class="QCheckBox" name="SelectLanguage" >
@@ -65,6 +72,13 @@
         </layout>
        </item>
        <item>
+        <widget class="QCheckBox" name="TranslateTags" >
+         <property name="text" >
+          <string>Translate standard tags</string>
+         </property>
+        </widget>
+       </item>
+       <item>
         <spacer name="verticalSpacer_3" >
          <property name="orientation" >
           <enum>Qt::Vertical</enum>
@@ -72,7 +86,7 @@
          <property name="sizeHint" stdset="0" >
           <size>
            <width>174</width>
-           <height>234</height>
+           <height>189</height>
           </size>
          </property>
         </spacer>
